--- a/A-Arte-da-Mesa.css
+++ b/A-Arte-da-Mesa.css
@@ -331,7 +331,6 @@ main {
 .glasses-section {
     width: 100vw; /* Largura total da viewport */
     height: 400px;
-    background-color: #f8f8f8;
     margin-bottom: 80px;
     margin-left: calc(-50vw + 50%); /* Quebra os limites do container pai */
     margin-right: calc(-50vw + 50%);
@@ -343,7 +342,7 @@ main {
     
     /* Estilização da scrollbar */
     scrollbar-width: thin;
-    scrollbar-color: #ccc transparent;
+    scrollbar-color: none
 }
 
 .glasses-section::-webkit-scrollbar {
@@ -355,13 +354,10 @@ main {
 }
 
 .glasses-section::-webkit-scrollbar-thumb {
-    background-color: #ccc;
-    border-radius: 4px;
+    background-color: none
+  
 }
 
-.glasses-section::-webkit-scrollbar-thumb:hover {
-    background-color: #999;
-}
 
 /* Container para a imagem */
 .glasses-scroll-container {
