--- a/A-Arte-da-Mesa.css
+++ b/A-Arte-da-Mesa.css
@@ -332,26 +332,26 @@ main {
     height: 400px;
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
-    overflow-x: auto;
-    overflow-y: hidden;
     display: flex;
     align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .glasses-scroll-container {
     display: flex;
     align-items: center;
-    white-space: nowrap;
-    min-width: fit-content;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 .glasses-image {
-    height: 80%;
-    width: auto;
-    min-width: 2000px;
+    width: 100vw;
+    height: auto;
+    max-height: 100%;
     object-fit: contain;
-    flex-shrink: 0;
-    margin: 0;
+    object-position: center;
 }
 
 /* Mobile responsive */
@@ -362,9 +362,9 @@ main {
     }
     
     .glasses-image {
-        height: 70%;
-        min-width: 600px; /* Menor largura mínima em mobile */
-        margin: 0 15px;
+        width: 100vw;
+        height: auto;
+        max-height: 100%;
     }
 }
 
@@ -374,9 +374,9 @@ main {
     }
     
     .glasses-image {
-        height: 60%;
-        min-width: 500px;
-        margin: 0 10px;
+        width: 100vw;
+        height: auto;
+        max-height: 100%;
     }
 }
 
