--- a/A-Arte-da-Mesa.css
+++ b/A-Arte-da-Mesa.css
@@ -328,10 +328,9 @@ main {
 
 
 .glasses-section {
-    width: 100vw;
+    width: 100%;
     height: 400px;
-    margin-left: calc(-50vw + 50%);
-    margin-right: calc(-50vw + 50%);
+    margin: 60px 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -347,7 +346,7 @@ main {
 }
 
 .glasses-image {
-    width: 100vw;
+    width: 100%;
     height: auto;
     max-height: 100%;
     object-fit: contain;
@@ -362,7 +361,7 @@ main {
     }
     
     .glasses-image {
-        width: 100vw;
+        width: 100%;
         height: auto;
         max-height: 100%;
     }
