--- a/modus.css
+++ b/modus.css
@@ -1050,7 +1050,7 @@ h3 {
     .hero-banner img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: fill;
         object-position: center center;
     }
     
