--- a/A-Arte-da-Mesa.css
+++ b/A-Arte-da-Mesa.css
@@ -322,7 +322,7 @@ main {
 
 .digital-concept-container {
   width: 100%;
-  height: 600px;
+  height: 790px;
   overflow: hidden;
   border-radius: 4px;
 }
@@ -330,7 +330,7 @@ main {
 .digital-concept-container video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
 
